--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,12 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: "3.0.2"
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+          # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       
       - name: Build App
         run: |
           yarn install
+          bundle install
           cp config/database.yml.sample config/database.yml
           bundle exec rails db:setup
 
